# catcode

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  THIRD_PARTY_NOTICES.md  architecture-baseline.json  build.sh  install-web.sh  install.ps1  install.sh  plan.html  protocol.schema.json  release-all.sh  release-linux.sh  release-macos.sh  release-web.sh  release-windows.sh  release.sh  update-web.sh
.catalyst-code/agents/: codebase-review-batch.md  context-builder.md  go-tui-reviewer.md  oracle.md  provider-rs-reviewer.md  release-reviewer.md  reviewer.md  rust-core-reviewer.md  security-reviewer.md  session-memory-reviewer.md  web-frontend-reviewer.md  worker.md
.github/workflows/: ci.yml  homebrew-tap.yml  release.yml  sandbox-image.yml
.umans-harness/agents/: context-builder.md  delegate.md  planner.md  (+10 more)
core/: Cargo.toml
core/src/: audit.rs  change_coupling.rs  checkpoint.rs  codebase_index.rs  config.rs  context_pack.rs  coverage_ledger.rs  embed.rs  episodes.rs  failure_atlas.rs  fetch_tool.rs  fsutil.rs  git_ctx.rs  goal.rs  goal_ceo.rs  hashline.rs  intercom.rs  knowledge_tool.rs  learning_activations.rs  learning_proposals.rs  learning_retrieval.rs  learning_store.rs  logging.rs  main.rs  memory.rs  memory_eval.rs  memory_hygiene.rs  memory_recall.rs  memory_staleness.rs  message.rs  models_dev.rs  oauth.rs  pattern_log.rs  plugins.rs  preferences.rs  presence.rs  project_identity.rs  protocol.rs  provider.rs  rejected_approaches.rs  (+13 more)
core/src/agent/: compaction.rs  goal_runtime.rs  mod.rs  turn_loop.rs
core/src/browser/: backend.rs  headless_display.rs  mod.rs  wry_backend.rs
core/src/browser/bridge/: find.js  snapshot.js
core/src/commands/: dispatcher.rs
core/src/protocol/: commands.rs  common.rs  events.rs  version.rs
core/src/providers/: adapter.rs  anthropic_compatible.rs  capabilities.rs  codex_responses.rs  discovery.rs  google_code_assist.rs  mod.rs  openai_compatible.rs  registry.rs  sse.rs  streaming.rs  usage.rs
core/src/runtime/: coordinator.rs  event_sink.rs  lifecycle.rs  mod.rs  resources.rs  run.rs
core/src/sandbox/: backend.rs  error.rs  manager.rs  microsandbox_backend.rs  mod.rs  policy.rs  preflight.rs  setup.rs
core/src/sandbox/preflight/: tests.rs
core/src/tooling/: approval.rs  execution.rs  metadata.rs  mod.rs  policy.rs  result.rs  scheduler.rs  schema.rs
core/src/tooling/builtin/: git.rs  memory.rs  mod.rs
core/tests/: protocol_harness.rs
core/tests/fixtures/memory/: retrieval-v1.json
core/tests/fixtures/memory/synthetic-repo/: ARCHITECTURE.md
core/tests/fixtures/memory/synthetic-repo/src/: runtime.rs
core/tests/fixtures/providers/: anthropic_stream.jsonl  codex_stream.jsonl  fragmented.sse  google_stream.jsonl  nonstandard_models.json  openai_error.json  openai_text.json  openai_tools.json  provider_errors.json
docs/: IDE_PANELS_CONTRACT.md  PLUGINS.md  SELF_LEARNING.md  WEB_FRONTEND_BUG_AUDIT.md  WEB_NOTIFICATION_AUDIT.md  index.md  installation.md  quickstart.md  troubleshooting.md  tui-perf-findings.md  tui-perf-fix-batch-a.md  tui-perf-fix-plan.md  tui-perf-surface.md
sandbox/: Dockerfile
scripts/: check-architecture.mjs  check-protocol-schema.mjs
sdk/: README.md  compat-probe.ts  package-lock.json  package.json  smoke-hi.mjs  smoke.mjs  tsconfig.json
tui/: ask.go  ask_test.go  async_cli_media_test.go  bang_test.go  blocks.go  blocks_discovery_test.go  busy_clear_test.go  busy_input_test.go  cap_stored_test.go  charm_modals.go  charm_theme.go  command_palette_test.go  composer.go  diff.go  diff_test.go  embed_core.go  embed_stub.go  extras.go  extras_test.go  go.mod  go.sum  goal_ux.go  goal_ux_test.go  handlers.go  history_test.go  images.go  images_test.go  implementation_regression_test.go  input_multiline_test.go  input_owner.go  input_reliability_test.go  input_wrap_test.go  intercom_reply_test.go  keybinds.go  keybinds_test.go  login_key_entry_test.go  main.go  markdown.go  markdown_legacy.go  mention.go  (+45 more)
web/: .env.example  .gitignore  README.md  TESTING.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  ui-test.cjs  ui-test2.cjs  ui-test3.cjs
(+274 files in other folders)
