[package]
name = "catalyst-code-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
description = "OpenAI-compatible coding agent core with native Umans provider"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-util = "0.7"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
jsonwebtoken = "9"
libc = "0.2"

[dev-dependencies]
filetime = "0.2"

[profile.release]
opt-level = 2
