[package]
name = "catalyst-code-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "OpenAI-compatible coding agent core with native Umans provider"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-util = "0.7"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
libc = "0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
bytes = "1"
# Sandbox: official Microsandbox Rust SDK (embeddable microVM). Gated behind
# the `microsandbox` feature (default on) so the SDK's heavy dep tree is only
# pulled when sandboxing is compiled in. ALL SDK types live behind CatCode-owned
# abstractions in `core/src/sandbox/` — never call the SDK directly from tools.
async-trait = "0.1"
thiserror = "1"
microsandbox = { version = "0.6.6", optional = true, default-features = false, features = ["net", "prebuilt"] }
wry = { version = "0.53", optional = true }
tao = { version = "0.34", optional = true }
# Linux screenshot: WebKitGTK get_snapshot → cairo PNG (versions aligned with wry 0.53).
webkit2gtk = { version = "2.0.1", optional = true }
cairo = { version = "0.18", package = "cairo-rs", optional = true, features = ["png"] }
gtk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }

[features]
default = ["microsandbox"]
native-browser = ["dep:wry", "dep:tao", "dep:webkit2gtk", "dep:cairo", "dep:gio", "dep:gtk", "dep:glib"]
# Microsandbox microVM sandboxing (Linux/KVM, Apple Silicon macOS, Windows/WHP).
# The SDK downloads its own runtime (msb + libkrunfw) on first use; no external
# CLI/daemon is required. Disable to build a sandbox-less core.
microsandbox = ["dep:microsandbox"]

[dev-dependencies]
filetime = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
